# agent_web

./: .agent_GC.md  .dockerignore  .gitignore  .secrets.baseline  AGENTS.md  Dockerfile  README.md  agent_chat.py  agents.md  browser_mcp_main.py  data_mcp_main.py  docker-compose.yaml  docx_use_mcp_main.py  main.py  pyproject.toml  requirements.txt  ruff.toml  search_reasoning.py
.claude/: settings.local.json
.claude/skills/alipay-payment-integration/: .alipay-payment-version  SKILL.md
.claude/skills/alipay-payment-integration/references/: checklist.md  product-decision.md
agent/: academic_agent.py  browser_use_agent.py  data_agent.py  desktop_control_agent.py  docx_use_agent.py  github_reader_agent.py  office_markdown_agent.py  office_pdf_agent.py  office_search_agent.py  office_word_agent.py  repo_monitor_agent.py  test_agent.py  test_agent_2.py
agent_docs/: 01_project_overview.md  05_data_config_and_storage.md  07_pending_work_and_style_guide.md
agent_manage/: README.md  read_agent.py  save_agent.py
api/: init_agent.py  init_team.py  init_workflow.py  knowledge_router.py  main.py  manage.py  monitor.py  registry.py  utils.py
api/tool/: installation_manager.py
auth/: __init__.py  config.py  db.py  kb_metadata.py  knowledge_processor.py  middleware.py  model.py  official_kb.py  official_knowledge.py  permissions.py  user_db.py  verify.py
config/: db_config.py  model_config.py  office_config.py  storage.yaml
deploy/nginx/: Dockerfile  default.conf  jwt_verify.lua  nginx.conf
deploy/nginx/ssl/: README.md
docs/: api.md  data_runtime_and_storage.md  deploy_aliyun.md  knowledge.txt  test_word.docx
docs/agent_docs/: 02_code_architecture.md  03_agents_teams_workflows.md  04_tools_and_servers.md  06_tests_and_dev_workflow.md
docs/knowledge_db/: 表结构.md
docs/plans/: 2026-03-05-web-driver-monitor-design.md  2026-03-18-browser-workflow-design.md  2026-03-20-browser-workflow-transient-dom.md  2026-03-21-browser-direct-tools-transient-state.md  2026-03-21-office-paths-and-verification.md  2026-03-21-office-team-implementation.md  2026-03-27-desktop-control-agent-design.md  2026-03-27-repo-monitor-agent-design.md
docs/superpowers/plans/: 2026-05-07-auth-system.md
docs/superpowers/specs/: 2026-05-07-auth-system-design.md
hook/: preprocess.py  save_session_hook.py  utils.py
knowledge/: __init__.py  add.py  chunk.py  file_detector.py  knowledge.md  processor.py  reader.py
models/: __init__.py  knowledge.py
script/: create_uv.sh  startup.sh
server/: mcp_runtime.py
server/computer_mcp/: __init__.py  main.py
server/data/: main.py  request_context.py
server/data/data_process/: data_preprocessing.py  router.py  task_pool.py
server/data/machine_learning/: machine_learning_model.py  param.py  process_pool.py  router.py
server/data/stat_analyse/: stat_analyse.py
server/docx_use_mcp/: __init__.py  main.py  setup_mcp.py  test_formatting.py
server/docx_use_mcp/docx_use_server/: main.py
server/docx_use_mcp/docx_use_server/core/: __init__.py  comments.py  footnotes.py  protection.py  styles.py  tables.py  unprotect.py
server/docx_use_mcp/docx_use_server/tools/: __init__.py  comment_tools.py  content_tools.py  document_tools.py  extended_document_tools.py  footnote_tools.py  format_tools.py  protection_tools.py
server/docx_use_mcp/docx_use_server/utils/: __init__.py  document_utils.py  extended_document_utils.py  file_utils.py
server/meta_mcp/apps/backend/: drizzle.config.ts  eslint.config.js  tsup.config.ts  vitest.config.ts
server/meta_mcp/apps/backend/src/: auth.ts  index.ts  trpc.ts
server/meta_mcp/apps/backend/src/db/: index.ts  schema.ts
server/meta_mcp/apps/backend/src/lib/: auth-rate-limiter.ts  config.service.ts  mcp-proxy.ts  session-lifetime-manager.ts  startup.ts
server/meta_mcp/apps/backend/src/middleware/: api-key-oauth.middleware.ts  better-auth-mcp.middleware.ts  (+1 more)
server/meta_mcp/apps/frontend/: eslint.config.mjs  middleware.ts
server/meta_mcp/apps/frontend/app/: layout.tsx
server/meta_mcp/apps/frontend/components/: OAuthCallback.tsx  domain-warning-banner.tsx  edit-endpoint.tsx  edit-mcp-server.tsx  edit-namespace.tsx  language-switcher.tsx  logs-status-indicator.tsx
server/meta_mcp/apps/frontend/hooks/: useConnection.ts  useLocale.ts  useTranslations.ts
server/meta_mcp/apps/frontend/lib/: auth-client.ts  env.ts  notificationTypes.ts  oauth-provider.ts  trpc.ts  validation-utils.ts  zod-resolver.ts
server/repo_monitor_mcp/: __init__.py  git_ops.py  main.py  scheduler.py  service.py  settings.py  storage.py
server/web_driver_monitor/: README.md  __init__.py  app.py  bus.py  config.py  events.py  main.py  playwright_runtime.py
server/web_driver_monitor/tests/: test_app.py  test_browser_workflow.py  test_playwright_runtime.py  test_watchdog_handles.py
server/web_driver_monitor/tests/fixtures/: storage_state.json
server/web_driver_monitor/watchdogs/: __init__.py  handles.py  page_actions.py
skills/agent-browser/: SKILL.md
storage/: __init__.py  qiniu_storage.py
team/: __init__.py  docx_use_team.py  office_team.py
tests/: test_academic_agent_registration.py  test_academic_search_toolkit.py  test_api_main_teams.py  test_auth_db.py  test_auth_middleware.py  test_auth_permissions.py  test_auth_verify.py  test_browser_use_agent_setup.py  test_computer_mcp_main.py  test_data_mcp_tool.py  test_file_detector.py  test_knowledge_api.py  test_knowledge_db.py  test_knowledge_isolation.py  test_main_entrypoint.py  test_office_main_entrypoint.py  test_office_paths.py  test_office_team_setup.py  test_repo_monitor_components.py  test_web_driver_monitor_toolkit.py
tools/: academic_search_toolkit.py  browser_use_tool.py  git_diff_toolkit.py  github_reader_toolkit.md  github_reader_toolkit.py  knowledge_query_tool.py  office_file_toolkit.py  office_markdown_toolkit.py  office_pdf_toolkit.py  office_search_toolkit.py  test_agent_tool.py  web_driver_monitor_toolkit.py
tools/mcp_tools/: _stdio.py  computer_mcp_tool.py  data_mcp_tool.py  docx_use_mcp_tool.py  repo_monitor_mcp_tool.py
workflow/: browser_workflow.py
(+121 files in other folders)
