[project]
name = "agent-manage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "agno==2.5.6",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.76.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "authlib==1.6.6",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beartype==0.22.9",
    "beautifulsoup4==4.14.3",
    "brotli==1.2.0",
    "browser-use-sdk==2.0.15",
    "bubus==1.5.6",
    "build==1.4.0",
    "cachetools==7.0.0",
    "cdp-use==1.4.5",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "chromadb==1.4.1",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "contourpy==1.3.3",
    "cryptography==46.0.4",
    "cycler==0.12.1",
    "cyclopts==4.5.1",
    "ddgs==9.10.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.4",
    "durationpy==0.10",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.1",
    "fake-useragent==2.2.0",
    "fakeredis==2.33.0",
    "fastapi==0.128.0",
    "fastembed==0.7.4",
    "fastmcp==2.14.4",
    "filelock==3.20.3",
    "flatbuffers==25.12.19",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "google-api-core==2.29.0",
    "google-api-python-client==2.188.0",
    "google-auth==2.48.0",
    "google-auth-httplib2==0.3.0",
    "google-auth-oauthlib==1.2.4",
    "google-genai==1.60.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.1",
    "groq==1.0.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.31.2",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.3.5",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "inquirerpy==0.3.4",
    "jaraco-classes==3.4.0",
    "jaraco-context==6.1.0",
    "jaraco-functools==4.4.0",
    "jiter==0.12.0",
    "joblib==1.5.3",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "keyring==25.7.0",
    "kiwisolver==1.4.9",
    "kubernetes==35.0.0",
    "loguru==0.7.3",
    "lupa==2.6",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markdownify==1.2.2",
    "matplotlib==3.10.8",
    "mcp==1.26.0",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "more-itertools==10.8.0",
    "mpmath==1.3.0",
    "msoffcrypto-tool==6.0.0",
    "multidict==6.7.1",
    "numpy==2.4.1",
    "oauthlib==3.3.1",
    "olefile==0.47",
    "ollama==0.6.1",
    "onnxruntime==1.23.2",
    "openai==2.16.0",
    "openapi-pydantic==0.5.1",
    "openinference-instrumentation==0.1.45",
    "openinference-instrumentation-agno==0.1.28",
    "openinference-semantic-conventions==0.1.26",
    "opensandbox==0.1.4",
    "opensandbox-code-interpreter==0.1.1",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
    "opentelemetry-exporter-prometheus==0.61b0",
    "opentelemetry-instrumentation==0.61b0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "orjson==3.11.6",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==3.0.0",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "pfzy==0.3.4",
    "pgvector==0.4.2",
    "pillow==11.2.1",
    "platformdirs==4.5.1",
    "playwright==1.58.0",
    "portalocker==2.10.1",
    "posthog>=2.4.0,<6.0.0",
    "primp==0.15.0",
    "prometheus-client==0.24.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "proto-plus==1.27.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "psycopg==3.3.3",
    "py-key-value-aio==0.3.0",
    "py-key-value-shared==0.3.0",
    "py-rust-stemmers==0.1.5",
    "pyaml==25.7.0",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydocket==0.16.6",
    "pyee==13.0.1",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pyotp==2.9.0",
    "pyparsing==3.3.2",
    "pypdf==6.6.2",
    "pyperclip==1.11.0",
    "pypika==0.50.0",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-json-logger==4.0.0",
    "python-multipart==0.0.22",
    "pywin32==311",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "redis==7.1.0",
    "referencing==0.36.2",
    "reportlab==4.4.9",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rich==14.3.1",
    "rich-rst==1.3.2",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "scikit-learn==1.8.0",
    "scikit-optimize==0.10.2",
    "scipy==1.17.0",
    "screeninfo==0.8.1",
    "setuptools==80.9.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sortedcontainers==2.4.0",
    "soupsieve==2.8.3",
    "sqlalchemy==2.0.46",
    "sse-starlette==3.2.0",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "tqdm==4.67.1",
    "typer==0.21.1",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
    "urllib3==2.6.3",
    "uuid7==0.1.0",
    "uv==0.9.29",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wheel==0.45.1",
    "win32-setctime==1.2.0",
    "wrapt==1.17.3",
    "yarl==1.22.0",
    "zipp==3.23.0",
]

[tool.uv.sources]
agno = { git = "https://github.com/iamikunnnnn/agno.git", subdirectory = "libs/agno", rev = "a471dba03190484fe8e0810c7318120045982f77" }
